# coatesweb

./: Cargo.toml  Dockerfile  Procfile  README.md  askama.toml  compose.yml
nginx/: Dockerfile  default.conf
src/: blog.rs  home.rs  main.rs  publications.rs  utils.rs
static/: blog.html  blog_article.html  index.html  notfound.html  publications.html
static/components/: blog_link.html  blog_year_block.html  footer.html  hero.html  home.html  mainstage.html  pub_link.html  pub_year_block.html  theme_toggle.html
static/content/: home.md
static/content/blog/ai-2023/: ai-2023.md  ai-2023.toml
static/content/blog/new-website/: new-website.md  new-website.toml
static/content/publications/: coates2023.toml  forbes-et-al2022.toml  nicolai-et-al2021.toml  oliver-et-al2022.toml
static/lib/: colortheme.js
static/styles/: dark_mode.css  footer.css  hero.css  home.css  layout.css  light_mode.css  mainstage.css  pub_link.css  theme_toggle.css
