[package]
name = "coatesweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["markdown"] }
markdown = "0.3.0"
rocket = "=0.5.0-rc.3"
toml_edit = "0.20.7"
